--- a/src/air_spain.ipynb
+++ b/src/air_spain.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,6 +28,8 @@
     "#pip install pandas openpyxl (para leer excels)\n",
     "import numpy as np\n",
     "import folium\n",
+    "import gzip\n",
+    "import shutil\n",
     "import matplotlib.pyplot as plt\n",
     "import sqlite3 as sql\n",
     "import seaborn as sns"
@@ -35,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +350,7 @@
        "4  0.30  0.28  0.30  0.26  0.29  0.36  0.43  0.32  0.32  0.30  0.30  0.28  "
       ]
      },
-     "execution_count": 89,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -359,17 +361,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pollutants.to_csv('../data/processed/pollutants.csv', index= False)\n",
-    "pollutants = pd.read_csv('../data/processed/pollutants.csv')"
+    "pollutants.to_csv('../data/interim/pollutants.csv', index= False)\n",
+    "pollutants = pd.read_csv('../data/interim/pollutants.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +380,7 @@
        "367595"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -390,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +401,7 @@
        "100332"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -411,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -916,7 +918,7 @@
        "[719282 rows x 32 columns]"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -928,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1110,19 +1112,19 @@
        "13  Contaminantes con valor legislado  "
       ]
      },
-     "execution_count": 94,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "measured_excel = pd.read_excel('../data/interim/Metainformacion2022.xlsx', sheet_name= 'Magnitudes')\n",
+    "measured_excel = pd.read_excel('../data/raw/Metainformacion2022.xlsx', sheet_name= 'Magnitudes')\n",
     "measured_excel.head(14)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1273,20 +1275,20 @@
        "2      CUARTEL DE LA ERTZANTZA  "
       ]
      },
-     "execution_count": 95,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Leer una hoja específica del archivo Excel\n",
-    "stations_excel= pd.read_excel('../data/interim/Metainformacion2022.xlsx', sheet_name='Estaciones')\n",
+    "stations_excel= pd.read_excel('../data/raw/Metainformacion2022.xlsx', sheet_name='Estaciones')\n",
     "stations_excel.head(3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1495,7 +1497,7 @@
        "4            AVDA. GASTEIZ, 93  "
       ]
      },
-     "execution_count": 96,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1518,7 +1520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1538,7 +1540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1595,7 +1597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1650,7 +1652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1911,7 +1913,7 @@
        "6  0.27  0.27  0.25  0.20  0.23  0.25  0.25  0.23  0.20  0.22  0.22  0.19  "
       ]
      },
-     "execution_count": 100,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1922,7 +1924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1944,7 +1946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1955,7 +1957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1977,7 +1979,7 @@
        " 62: 'NI'}"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1994,7 +1996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2003,7 +2005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -2390,7 +2392,7 @@
        " (51, 1): 'CEUTA'}"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2403,7 +2405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -2462,7 +2464,7 @@
        " 51: 'CEUTA'}"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2479,12 +2481,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "# Crear la clave combinada en el DataFrame objetivo.\n",
+    "# Crear clave combinada en el DataFrame objetivo para crear la columna con los nombres de los municipios\n",
     "pollutants['LOC_MUNIC'] = pollutants.apply(lambda x: (x['PROVINCIA'], x['MUNICIPIO']), axis=1)\n",
     "\n",
     "# Usar el método .map() para mapear los nombres de municipio usando el diccionario.\n",
@@ -2495,7 +2496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -2976,7 +2977,7 @@
        "[719282 rows x 30 columns]"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2990,7 +2991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -3459,7 +3460,7 @@
        "[719282 rows x 29 columns]"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3481,12 +3482,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Guardar dataframe procesado\n",
     "pollutants_clean = pollutants.to_csv('../data/processed/clean_pollutants.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# #  Comprimir DataFrame con los archivos de contaminantes unificados\n",
+    "# pollutants_csv = '../data/interim/pollutants.csv'\n",
+    "# pollutants_zip = '../data/interim/pollutants.csv.gz'\n",
+    "\n",
+    "# with open(pollutants_csv, 'rb') as f_in:\n",
+    "#     with gzip.open(pollutants_zip, 'wb') as f_out:\n",
+    "#         shutil.copyfileobj(f_in, f_out)\n",
+    "\n",
+    "# print(f\"Archivo {pollutants_csv} comprimido a {pollutants_zip}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# #  Comprimir DataFrame con los datos procesados \n",
+    "# pollutants_clean_csv = '../data/processed/clean_pollutants.csv'\n",
+    "# pollutants_clean_zip = '../data/processed/clean_pollutants.csv.gz'\n",
+    "\n",
+    "# with open(pollutants_clean_csv, 'rb') as f_in:\n",
+    "#     with gzip.open(pollutants_clean_zip, 'wb') as f_out:\n",
+    "#         shutil.copyfileobj(f_in, f_out)\n",
+    "\n",
+    "# print(f\"Archivo {pollutants_clean_csv} comprimido a {pollutants_clean_zip}\")"
    ]
   }
  ],
