--- a/src/air_spain.ipynb
+++ b/src/air_spain.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +350,7 @@
        "4  0.30  0.28  0.30  0.26  0.29  0.36  0.43  0.32  0.32  0.30  0.30  0.28  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +380,7 @@
        "367595"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +401,7 @@
        "100332"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -918,7 +918,7 @@
        "[719282 rows x 32 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -930,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1112,7 +1112,7 @@
        "13  Contaminantes con valor legislado  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1124,7 +1124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1275,7 +1275,7 @@
        "2      CUARTEL DE LA ERTZANTZA  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1288,7 +1288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1497,7 +1497,7 @@
        "4            AVDA. GASTEIZ, 93  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1520,7 +1520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1540,7 +1540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1597,7 +1597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1652,7 +1652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1913,7 +1913,7 @@
        "6  0.27  0.27  0.25  0.20  0.23  0.25  0.25  0.23  0.20  0.22  0.22  0.19  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1924,7 +1924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1946,7 +1946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1957,7 +1957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -1979,7 +1979,7 @@
        " 62: 'NI'}"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1996,7 +1996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2005,7 +2005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -2392,7 +2392,7 @@
        " (51, 1): 'CEUTA'}"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2405,7 +2405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -2464,7 +2464,7 @@
        " 51: 'CEUTA'}"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2481,7 +2481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2496,7 +2496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -2977,7 +2977,7 @@
        "[719282 rows x 30 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2991,7 +2991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -3460,7 +3460,7 @@
        "[719282 rows x 29 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3482,7 +3482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3492,9 +3492,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Archivo ../data/interim/pollutants.csv comprimido a ../data/interim/pollutants.csv.gz\n"
+     ]
+    }
+   ],
    "source": [
     "# #  Comprimir DataFrame con los archivos de contaminantes unificados\n",
     "# pollutants_csv = '../data/interim/pollutants.csv'\n",
@@ -3509,9 +3517,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 58,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Archivo ../data/processed/clean_pollutants.csv comprimido a ../data/processed/clean_pollutants.csv.gz\n"
+     ]
+    }
+   ],
    "source": [
     "# #  Comprimir DataFrame con los datos procesados \n",
     "# pollutants_clean_csv = '../data/processed/clean_pollutants.csv'\n",
