--- a/src/pre-processing.ipynb
+++ b/src/pre-processing.ipynb
@@ -2957,6 +2957,60 @@
    "cell_type": "code",
    "execution_count": 27,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Crear el diccionario para el tipo de área\n",
+    "dicc_area = {(row['LATITUD_G'], row['LONGITUD_G']): row['TIPO_AREA'] for index, row in stations_excel.iterrows()}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Crear el diccionario para el tipo de estación\n",
+    "dicc_tipoestacion = {(row['LATITUD_G'], row['LONGITUD_G']): row['TIPO_ESTACION'] for index, row in stations_excel.iterrows()}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Función para mapear cada fila al valor del diccionario del tipo de area\n",
+    "def mapear_area(row):\n",
+    "    # Crea una tupla con los valores de la fila\n",
+    "    clave = (row['LATITUD'], row['LONGITUD'])\n",
+    "    # Devuelve el valor correspondiente del diccionario\n",
+    "    return dicc_area.get(clave, None)  # Retorna None si la clave no existe\n",
+    "\n",
+    "# Aplica la función a cada fila y crea una nueva columna\n",
+    "pollutants['TIPO_AREA'] = pollutants.apply(mapear_area, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Función para mapear cada fila al valor del diccionario del tipo de estacion\n",
+    "def mapear_estacion(row):\n",
+    "    # Crea una tupla con los valores de la fila\n",
+    "    clave = (row['LATITUD'], row['LONGITUD'])\n",
+    "    # Devuelve el valor correspondiente del diccionario\n",
+    "    return dicc_tipoestacion.get(clave, None)  # Retorna None si la clave no existe\n",
+    "\n",
+    "# Aplica la función a cada fila y crea una nueva columna\n",
+    "pollutants['TIPO_ESTACION'] = pollutants.apply(mapear_estacion, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -2985,10 +3039,10 @@
        "      <th>N_MUNICIPIO</th>\n",
        "      <th>ESTACION</th>\n",
        "      <th>MAGNITUD</th>\n",
+       "      <th>TIPO_AREA</th>\n",
+       "      <th>TIPO_ESTACION</th>\n",
        "      <th>LATITUD</th>\n",
        "      <th>LONGITUD</th>\n",
-       "      <th>H01</th>\n",
-       "      <th>H02</th>\n",
        "      <th>...</th>\n",
        "      <th>H15</th>\n",
        "      <th>H16</th>\n",
@@ -3011,10 +3065,10 @@
        "      <td>VITORIA-GASTEIZ</td>\n",
        "      <td>8</td>\n",
        "      <td>C6H6</td>\n",
+       "      <td>URBANA</td>\n",
+       "      <td>TRAFICO</td>\n",
        "      <td>42.8548</td>\n",
        "      <td>-2.6807</td>\n",
-       "      <td>0.16</td>\n",
-       "      <td>0.16</td>\n",
        "      <td>...</td>\n",
        "      <td>0.17</td>\n",
        "      <td>0.18</td>\n",
@@ -3035,10 +3089,10 @@
        "      <td>VITORIA-GASTEIZ</td>\n",
        "      <td>8</td>\n",
        "      <td>C6H6</td>\n",
+       "      <td>URBANA</td>\n",
+       "      <td>TRAFICO</td>\n",
        "      <td>42.8548</td>\n",
        "      <td>-2.6807</td>\n",
-       "      <td>0.23</td>\n",
-       "      <td>0.26</td>\n",
        "      <td>...</td>\n",
        "      <td>0.48</td>\n",
        "      <td>0.33</td>\n",
@@ -3059,10 +3113,10 @@
        "      <td>VITORIA-GASTEIZ</td>\n",
        "      <td>8</td>\n",
        "      <td>C6H6</td>\n",
+       "      <td>URBANA</td>\n",
+       "      <td>TRAFICO</td>\n",
        "      <td>42.8548</td>\n",
        "      <td>-2.6807</td>\n",
-       "      <td>0.36</td>\n",
-       "      <td>0.31</td>\n",
        "      <td>...</td>\n",
        "      <td>0.30</td>\n",
        "      <td>0.26</td>\n",
@@ -3083,10 +3137,10 @@
        "      <td>VITORIA-GASTEIZ</td>\n",
        "      <td>8</td>\n",
        "      <td>C6H6</td>\n",
+       "      <td>URBANA</td>\n",
+       "      <td>TRAFICO</td>\n",
        "      <td>42.8548</td>\n",
        "      <td>-2.6807</td>\n",
-       "      <td>0.25</td>\n",
-       "      <td>0.24</td>\n",
        "      <td>...</td>\n",
        "      <td>0.28</td>\n",
        "      <td>0.29</td>\n",
@@ -3107,10 +3161,10 @@
        "      <td>VITORIA-GASTEIZ</td>\n",
        "      <td>8</td>\n",
        "      <td>C6H6</td>\n",
+       "      <td>URBANA</td>\n",
+       "      <td>TRAFICO</td>\n",
        "      <td>42.8548</td>\n",
        "      <td>-2.6807</td>\n",
-       "      <td>0.25</td>\n",
-       "      <td>0.25</td>\n",
        "      <td>...</td>\n",
        "      <td>0.25</td>\n",
        "      <td>0.20</td>\n",
@@ -3155,10 +3209,10 @@
        "      <td>CEUTA</td>\n",
        "      <td>1</td>\n",
        "      <td>SO2</td>\n",
+       "      <td>URBANA</td>\n",
+       "      <td>FONDO</td>\n",
        "      <td>35.8930</td>\n",
        "      <td>-5.3147</td>\n",
-       "      <td>1.53</td>\n",
-       "      <td>1.33</td>\n",
        "      <td>...</td>\n",
        "      <td>2.22</td>\n",
        "      <td>2.43</td>\n",
@@ -3179,10 +3233,10 @@
        "      <td>CEUTA</td>\n",
        "      <td>1</td>\n",
        "      <td>SO2</td>\n",
+       "      <td>URBANA</td>\n",
+       "      <td>FONDO</td>\n",
        "      <td>35.8930</td>\n",
        "      <td>-5.3147</td>\n",
-       "      <td>1.64</td>\n",
-       "      <td>1.50</td>\n",
        "      <td>...</td>\n",
        "      <td>15.03</td>\n",
        "      <td>25.54</td>\n",
@@ -3203,10 +3257,10 @@
        "      <td>CEUTA</td>\n",
        "      <td>1</td>\n",
        "      <td>SO2</td>\n",
+       "      <td>URBANA</td>\n",
+       "      <td>FONDO</td>\n",
        "      <td>35.8930</td>\n",
        "      <td>-5.3147</td>\n",
-       "      <td>2.30</td>\n",
-       "      <td>2.15</td>\n",
        "      <td>...</td>\n",
        "      <td>2.72</td>\n",
        "      <td>2.27</td>\n",
@@ -3227,10 +3281,10 @@
        "      <td>CEUTA</td>\n",
        "      <td>1</td>\n",
        "      <td>SO2</td>\n",
+       "      <td>URBANA</td>\n",
+       "      <td>FONDO</td>\n",
        "      <td>35.8930</td>\n",
        "      <td>-5.3147</td>\n",
-       "      <td>1.40</td>\n",
-       "      <td>1.22</td>\n",
        "      <td>...</td>\n",
        "      <td>3.31</td>\n",
        "      <td>3.77</td>\n",
@@ -3251,10 +3305,10 @@
        "      <td>CEUTA</td>\n",
        "      <td>1</td>\n",
        "      <td>SO2</td>\n",
+       "      <td>URBANA</td>\n",
+       "      <td>FONDO</td>\n",
        "      <td>35.8930</td>\n",
        "      <td>-5.3147</td>\n",
-       "      <td>1.68</td>\n",
-       "      <td>1.40</td>\n",
        "      <td>...</td>\n",
        "      <td>1.88</td>\n",
        "      <td>1.71</td>\n",
@@ -3269,7 +3323,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>719282 rows × 32 columns</p>\n",
+       "<p>719282 rows × 34 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -3286,36 +3340,36 @@
        "819611 2022-12-26       CEUTA     CEUTA            CEUTA         1      SO2   \n",
        "819612 2022-12-28       CEUTA     CEUTA            CEUTA         1      SO2   \n",
        "\n",
-       "        LATITUD  LONGITUD   H01   H02  ...    H15    H16    H17    H18    H19  \\\n",
-       "2       42.8548   -2.6807  0.16  0.16  ...   0.17   0.18   0.19   0.25   0.25   \n",
-       "3       42.8548   -2.6807  0.23  0.26  ...   0.48   0.33   0.45   0.58   0.57   \n",
-       "4       42.8548   -2.6807  0.36  0.31  ...   0.30   0.26   0.29   0.36   0.43   \n",
-       "5       42.8548   -2.6807  0.25  0.24  ...   0.28   0.29   0.28   0.32   0.31   \n",
-       "6       42.8548   -2.6807  0.25  0.25  ...   0.25   0.20   0.23   0.25   0.25   \n",
-       "...         ...       ...   ...   ...  ...    ...    ...    ...    ...    ...   \n",
-       "819608  35.8930   -5.3147  1.53  1.33  ...   2.22   2.43   3.32   6.62  19.11   \n",
-       "819609  35.8930   -5.3147  1.64  1.50  ...  15.03  25.54  12.58  38.78  17.84   \n",
-       "819610  35.8930   -5.3147  2.30  2.15  ...   2.72   2.27   2.07   2.00   1.79   \n",
-       "819611  35.8930   -5.3147  1.40  1.22  ...   3.31   3.77   2.82   2.47   2.79   \n",
-       "819612  35.8930   -5.3147  1.68  1.40  ...   1.88   1.71   1.66   1.70   1.58   \n",
+       "       TIPO_AREA TIPO_ESTACION  LATITUD  LONGITUD  ...    H15    H16    H17  \\\n",
+       "2         URBANA       TRAFICO  42.8548   -2.6807  ...   0.17   0.18   0.19   \n",
+       "3         URBANA       TRAFICO  42.8548   -2.6807  ...   0.48   0.33   0.45   \n",
+       "4         URBANA       TRAFICO  42.8548   -2.6807  ...   0.30   0.26   0.29   \n",
+       "5         URBANA       TRAFICO  42.8548   -2.6807  ...   0.28   0.29   0.28   \n",
+       "6         URBANA       TRAFICO  42.8548   -2.6807  ...   0.25   0.20   0.23   \n",
+       "...          ...           ...      ...       ...  ...    ...    ...    ...   \n",
+       "819608    URBANA         FONDO  35.8930   -5.3147  ...   2.22   2.43   3.32   \n",
+       "819609    URBANA         FONDO  35.8930   -5.3147  ...  15.03  25.54  12.58   \n",
+       "819610    URBANA         FONDO  35.8930   -5.3147  ...   2.72   2.27   2.07   \n",
+       "819611    URBANA         FONDO  35.8930   -5.3147  ...   3.31   3.77   2.82   \n",
+       "819612    URBANA         FONDO  35.8930   -5.3147  ...   1.88   1.71   1.66   \n",
        "\n",
-       "          H20    H21    H22    H23    H24  \n",
-       "2        0.28   0.25   0.20   0.20   0.22  \n",
-       "3        0.51   0.51   0.51   0.48   0.41  \n",
-       "4        0.32   0.32   0.30   0.30   0.28  \n",
-       "5        0.23   0.25   0.29   0.29   0.28  \n",
-       "6        0.23   0.20   0.22   0.22   0.19  \n",
-       "...       ...    ...    ...    ...    ...  \n",
-       "819608  17.15   8.29  29.35  24.51  24.16  \n",
-       "819609   8.01  11.66   3.28   5.70   5.62  \n",
-       "819610   1.65   1.68   1.39   1.30   1.28  \n",
-       "819611   2.77   2.66   2.51   2.42   2.52  \n",
-       "819612   2.12   1.61   1.57   1.88   1.62  \n",
+       "          H18    H19    H20    H21    H22    H23    H24  \n",
+       "2        0.25   0.25   0.28   0.25   0.20   0.20   0.22  \n",
+       "3        0.58   0.57   0.51   0.51   0.51   0.48   0.41  \n",
+       "4        0.36   0.43   0.32   0.32   0.30   0.30   0.28  \n",
+       "5        0.32   0.31   0.23   0.25   0.29   0.29   0.28  \n",
+       "6        0.25   0.25   0.23   0.20   0.22   0.22   0.19  \n",
+       "...       ...    ...    ...    ...    ...    ...    ...  \n",
+       "819608   6.62  19.11  17.15   8.29  29.35  24.51  24.16  \n",
+       "819609  38.78  17.84   8.01  11.66   3.28   5.70   5.62  \n",
+       "819610   2.00   1.79   1.65   1.68   1.39   1.30   1.28  \n",
+       "819611   2.47   2.79   2.77   2.66   2.51   2.42   2.52  \n",
+       "819612   1.70   1.58   2.12   1.61   1.57   1.88   1.62  \n",
        "\n",
-       "[719282 rows x 32 columns]"
+       "[719282 rows x 34 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3329,7 +3383,7 @@
     "                  'H21', 'H22', 'H23', 'H24']\n",
     "\n",
     "# Nuevo orden de las columnas\n",
-    "nuevo_orden = ['FECHA', 'N_CCAA', 'PROVINCIA', 'N_MUNICIPIO', 'ESTACION', 'MAGNITUD', 'LATITUD', 'LONGITUD'] + columnas_horas\n",
+    "nuevo_orden = ['FECHA', 'N_CCAA', 'PROVINCIA', 'N_MUNICIPIO', 'ESTACION', 'MAGNITUD', 'TIPO_AREA', 'TIPO_ESTACION', 'LATITUD', 'LONGITUD'] + columnas_horas\n",
     "\n",
     "pollutants = pollutants[nuevo_orden]\n",
     "pollutants\n"
@@ -3337,7 +3391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
