--- a/src/EDA_madrid.ipynb
+++ b/src/EDA_madrid.ipynb
@@ -995,7 +995,19 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "- El primer gráfico muestra la peligrosidad por tipo de estación, que son tráfico, fondo o industrial. El tipo de estación que tiene más casos con una peligrosidad baja es el tráfico, lo que puede indicar que la contaminación del aire en las zonas de tráfico es menor de lo esperado.\n",
+    "\n",
+    "- El segundo gráfico muestra la media diaria de la peligrosidad, que es el promedio de los valores de peligrosidad de cada día. La media diaria disminuye a medida que avanza el tiempo, lo que puede indicar que la contaminación del aire se ha reducido en el periodo analizado.\n",
+    "\n",
+    "- El tercer gráfico muestra la peligrosidad por número de municipio, que es un código numérico que identifica a cada municipio. Hay una gran variación entre los municipios, algunos tienen una peligrosidad baja, otros una normal y otros una alta. Esto puede indicar que la contaminación del aire depende de factores locales, como la ubicación, el clima, la actividad económica, etc.\n",
+    "\n",
+    "- El cuarto gráfico muestra la peligrosidad por magnitud, que es el tipo de contaminante que se mide. Hay ocho magnitudes: C6H6, CO, NO2, NOx, O3, PM10, PM2.5 y SO2. Las magnitudes que tienen más casos con una peligrosidad baja son el NO2 y el NOx, que son contaminantes que provienen principalmente de la combustión de los vehículos. Las magnitudes que tienen más casos con una peligrosidad alta son el C6H6 y el SO2, que son contaminantes que provienen principalmente de fuentes industriales.\n",
+    "\n",
+    "- El quinto gráfico muestra la peligrosidad por tipo de área, que puede ser urbana, rural o suburbana. El tipo de área que tiene más casos con una peligrosidad baja es la urbana, lo que puede indicar que la contaminación del aire en las ciudades es menor de lo esperado. El tipo de área que tiene más casos con una peligrosidad alta es la rural, lo que puede indicar que la contaminación del aire en las zonas rurales es mayor de lo esperado.\n",
+    "\n",
+    "- El sexto gráfico muestra la peligrosidad en general, sin distinguir por ninguna otra variable. La mayoría de los casos tienen una peligrosidad baja, lo que puede indicar que la contaminación del aire no es un problema grave en el conjunto de los datos. Sin embargo, hay algunos casos con una peligrosidad normal o alta, lo que puede indicar que hay situaciones o lugares donde la contaminación del aire es un riesgo para la salud y el medio ambiente."
+   ]
   },
   {
    "cell_type": "code",
@@ -1025,6 +1037,13 @@
     "plt.title('Distribución por Municipio')\n",
     "plt.xticks(rotation=90)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- El municipio de la Comunidad de Madrid que mayor número de instancias tiene en nuestros datos es Madrid."
    ]
   },
   {
@@ -1061,6 +1080,19 @@
     "\n",
     "plt.tight_layout()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- En el primer gráfico, se puede ver que la mayoría de los municipios tienen una peligrosidad baja, excepto algunos que tienen una peligrosidad normal o alta. Esto significa que la contaminación del aire no es un problema grave en la mayoría de los municipios, pero hay algunos que requieren más atención y medidas de prevención.\n",
+    "\n",
+    "- En el segundo gráfico, se puede ver que hay un tipo de área que tiene una cuenta muy alta con una peligrosidad baja. Esto significa que este tipo de área tiene una baja exposición a la contaminación del aire, lo que puede deberse a su ubicación geográfica, su clima, su vegetación, etc.\n",
+    "\n",
+    "- En el tercer gráfico, se puede ver que el tipo de estación que tiene una cuenta más alta con una peligrosidad baja es el tráfico. Esto significa que las estaciones que miden la contaminación del aire en las zonas de tráfico tienen una baja incidencia de contaminantes que suponen un riesgo para la salud y el medio ambiente. Esto puede deberse a que el tráfico se ha reducido por el uso de vehículos eléctricos, el transporte público, la bicicleta, etc.\n",
+    "\n",
+    "- En el cuarto gráfico, se puede ver que las magnitudes que tienen las cuentas más altas con una peligrosidad baja o normal son el NO2 y el OX. Estas magnitudes corresponden al dióxido de nitrógeno y al óxido nítrico, que son contaminantes que se originan principalmente por la combustión de los motores de los vehículos. Esto puede deberse a que se han implementado normas más estrictas para limitar las emisiones de estos contaminantes, o a que se han usado combustibles más limpios o renovables.\n"
    ]
   },
   {
