--- a/src/EDA_madrid.ipynb
+++ b/src/EDA_madrid.ipynb
@@ -1241,6 +1241,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- El subgráfico superior izquierdo muestra la relación entre el tipo de área y la peligrosidad. El tipo de área es una variable numérica que representa el tipo de zona donde se mide la contaminación: urbana, rural o suburbana. La peligrosidad es una variable numérica que representa el nivel de riesgo de la contaminación: bajo, normal o alto. El diagrama de dispersión muestra que hay una tendencia negativa entre las variables, es decir, que a mayor tipo de área, menor peligrosidad. El mapa de calor muestra que el coeficiente de correlación entre las variables es -0.11, lo que indica una correlación débil y negativa.\n",
+    "\n",
+    "- El subgráfico superior derecho muestra la relación entre el número de municipio y la peligrosidad. El número de municipio es una variable numérica que identifica a cada municipio. La peligrosidad es la misma variable que antes. El diagrama de dispersión muestra que no hay una tendencia clara entre las variables, es decir, que no hay una relación lineal entre el número de municipio y la peligrosidad. El mapa de calor muestra que el coeficiente de correlación entre las variables es -0.03, lo que indica una correlación muy débil y negativa.\n",
+    "\n",
+    "- El subgráfico inferior izquierdo muestra la relación entre el tipo de área y el número de municipio. El tipo de área y el número de municipio son las mismas variables que antes. El mapa de calor muestra que el coeficiente de correlación entre las variables es 0.02, lo que indica una correlación muy débil y positiva.\n",
+    "\n",
+    "- El subgráfico inferior derecho muestra la relación entre la peligrosidad y el número de municipio. La peligrosidad y el número de municipio son las mismas variables que antes. El mapa de calor muestra que el coeficiente de correlación entre las variables es 1.00, lo que indica una correlación perfecta y positiva. Esto se debe a que la peligrosidad y el número de municipio son la misma variable, ya que se ha usado la misma columna para ambos subgráficos."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
