--- a/notebooks/preprocess.ipynb
+++ b/notebooks/preprocess.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +346,7 @@
        "4  0.30  0.28  0.30  0.26  0.29  0.36  0.43  0.32  0.32  0.30  0.30  0.28  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -606,7 +606,7 @@
        "4  0.26  0.29  0.36  0.43  0.32  0.32  0.30  0.30  0.28 2022-01-06  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -621,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -713,7 +713,7 @@
        "4  Contaminantes con valor legislado  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -721,6 +721,169 @@
    "source": [
     "measured_excel = pd.read_excel('../data/raw/Metainformacion2022.xlsx', sheet_name= 'Magnitudes')\n",
     "measured_excel.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>COD_LOCAL</th>\n",
+       "      <th>PROVINCIA</th>\n",
+       "      <th>MUNICIPIO</th>\n",
+       "      <th>ESTACION</th>\n",
+       "      <th>COD_ESTACION_DEM</th>\n",
+       "      <th>N_RED</th>\n",
+       "      <th>NOMBRE</th>\n",
+       "      <th>FECHA_INI</th>\n",
+       "      <th>FECHA_FIN</th>\n",
+       "      <th>LATITUD_G</th>\n",
+       "      <th>LONGITUD_G</th>\n",
+       "      <th>ALTITUD</th>\n",
+       "      <th>N_CCAA</th>\n",
+       "      <th>N_PROVINCIA</th>\n",
+       "      <th>N_MUNICIPIO</th>\n",
+       "      <th>TIPO_ESTACION</th>\n",
+       "      <th>TIPO_AREA</th>\n",
+       "      <th>TIPO_SUBAREA_RURAL</th>\n",
+       "      <th>EST</th>\n",
+       "      <th>ZONA</th>\n",
+       "      <th>DIRECCION</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1022001</td>\n",
+       "      <td>1</td>\n",
+       "      <td>22</td>\n",
+       "      <td>1</td>\n",
+       "      <td>ES1672A</td>\n",
+       "      <td>CCAA País Vasco</td>\n",
+       "      <td>EL CIEGO</td>\n",
+       "      <td>2004-05-10</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>42.51833</td>\n",
+       "      <td>-2.61944</td>\n",
+       "      <td>480</td>\n",
+       "      <td>PAÍS VASCO</td>\n",
+       "      <td>ÁLAVA</td>\n",
+       "      <td>ELCIEGO</td>\n",
+       "      <td>TRAFICO</td>\n",
+       "      <td>SUBURBANA</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>ST</td>\n",
+       "      <td>RESIDENCIAL</td>\n",
+       "      <td>C/GABRIEL CELAYA 8, ELCIEGO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1036004</td>\n",
+       "      <td>1</td>\n",
+       "      <td>36</td>\n",
+       "      <td>4</td>\n",
+       "      <td>ES1349A</td>\n",
+       "      <td>CCAA País Vasco</td>\n",
+       "      <td>LLODIO</td>\n",
+       "      <td>1994-01-01</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>43.14407</td>\n",
+       "      <td>-2.96337</td>\n",
+       "      <td>122</td>\n",
+       "      <td>PAÍS VASCO</td>\n",
+       "      <td>ÁLAVA</td>\n",
+       "      <td>LLODIO</td>\n",
+       "      <td>TRAFICO</td>\n",
+       "      <td>SUBURBANA</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>ST</td>\n",
+       "      <td>RESIDENCIAL/COMERCIAL</td>\n",
+       "      <td>C/ LAMUZA, S/N</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1051001</td>\n",
+       "      <td>1</td>\n",
+       "      <td>51</td>\n",
+       "      <td>1</td>\n",
+       "      <td>ES1544A</td>\n",
+       "      <td>CCAA País Vasco</td>\n",
+       "      <td>AGURAIN</td>\n",
+       "      <td>1998-01-01</td>\n",
+       "      <td>NaT</td>\n",
+       "      <td>42.84900</td>\n",
+       "      <td>-2.39370</td>\n",
+       "      <td>594</td>\n",
+       "      <td>PAÍS VASCO</td>\n",
+       "      <td>ÁLAVA</td>\n",
+       "      <td>SALVATIERRA O AGURAIN</td>\n",
+       "      <td>FONDO</td>\n",
+       "      <td>SUBURBANA</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>SF</td>\n",
+       "      <td>RESIDENCIAL/INDUSTRIAL</td>\n",
+       "      <td>CUARTEL DE LA ERTZANTZA</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   COD_LOCAL  PROVINCIA  MUNICIPIO  ESTACION COD_ESTACION_DEM  \\\n",
+       "0    1022001          1         22         1          ES1672A   \n",
+       "1    1036004          1         36         4          ES1349A   \n",
+       "2    1051001          1         51         1          ES1544A   \n",
+       "\n",
+       "             N_RED    NOMBRE  FECHA_INI FECHA_FIN  LATITUD_G  LONGITUD_G  \\\n",
+       "0  CCAA País Vasco  EL CIEGO 2004-05-10       NaT   42.51833    -2.61944   \n",
+       "1  CCAA País Vasco    LLODIO 1994-01-01       NaT   43.14407    -2.96337   \n",
+       "2  CCAA País Vasco   AGURAIN 1998-01-01       NaT   42.84900    -2.39370   \n",
+       "\n",
+       "   ALTITUD      N_CCAA N_PROVINCIA            N_MUNICIPIO TIPO_ESTACION  \\\n",
+       "0      480  PAÍS VASCO       ÁLAVA                ELCIEGO       TRAFICO   \n",
+       "1      122  PAÍS VASCO       ÁLAVA                 LLODIO       TRAFICO   \n",
+       "2      594  PAÍS VASCO       ÁLAVA  SALVATIERRA O AGURAIN         FONDO   \n",
+       "\n",
+       "   TIPO_AREA TIPO_SUBAREA_RURAL EST                    ZONA  \\\n",
+       "0  SUBURBANA                NaN  ST             RESIDENCIAL   \n",
+       "1  SUBURBANA                NaN  ST   RESIDENCIAL/COMERCIAL   \n",
+       "2  SUBURBANA                NaN  SF  RESIDENCIAL/INDUSTRIAL   \n",
+       "\n",
+       "                     DIRECCION  \n",
+       "0  C/GABRIEL CELAYA 8, ELCIEGO  \n",
+       "1               C/ LAMUZA, S/N  \n",
+       "2      CUARTEL DE LA ERTZANTZA  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stations_excel= pd.read_excel('../data/raw/Metainformacion2022.xlsx', sheet_name='Estaciones')\n",
+    "stations_excel.head(3)"
    ]
   },
   {
@@ -882,169 +1045,6 @@
     }
    ],
    "source": [
-    "stations_excel= pd.read_excel('../data/raw/Metainformacion2022.xlsx', sheet_name='Estaciones')\n",
-    "stations_excel.head(3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>COD_LOCAL</th>\n",
-       "      <th>PROVINCIA</th>\n",
-       "      <th>MUNICIPIO</th>\n",
-       "      <th>ESTACION</th>\n",
-       "      <th>COD_ESTACION_DEM</th>\n",
-       "      <th>N_RED</th>\n",
-       "      <th>NOMBRE</th>\n",
-       "      <th>FECHA_INI</th>\n",
-       "      <th>FECHA_FIN</th>\n",
-       "      <th>LATITUD_G</th>\n",
-       "      <th>LONGITUD_G</th>\n",
-       "      <th>ALTITUD</th>\n",
-       "      <th>N_CCAA</th>\n",
-       "      <th>N_PROVINCIA</th>\n",
-       "      <th>N_MUNICIPIO</th>\n",
-       "      <th>TIPO_ESTACION</th>\n",
-       "      <th>TIPO_AREA</th>\n",
-       "      <th>TIPO_SUBAREA_RURAL</th>\n",
-       "      <th>EST</th>\n",
-       "      <th>ZONA</th>\n",
-       "      <th>DIRECCION</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1022001</td>\n",
-       "      <td>1</td>\n",
-       "      <td>22</td>\n",
-       "      <td>1</td>\n",
-       "      <td>ES1672A</td>\n",
-       "      <td>CCAA País Vasco</td>\n",
-       "      <td>EL CIEGO</td>\n",
-       "      <td>2004-05-10</td>\n",
-       "      <td>NaT</td>\n",
-       "      <td>42.51833</td>\n",
-       "      <td>-2.61944</td>\n",
-       "      <td>480</td>\n",
-       "      <td>PAÍS VASCO</td>\n",
-       "      <td>ÁLAVA</td>\n",
-       "      <td>ELCIEGO</td>\n",
-       "      <td>TRAFICO</td>\n",
-       "      <td>SUBURBANA</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>ST</td>\n",
-       "      <td>RESIDENCIAL</td>\n",
-       "      <td>C/GABRIEL CELAYA 8, ELCIEGO</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1036004</td>\n",
-       "      <td>1</td>\n",
-       "      <td>36</td>\n",
-       "      <td>4</td>\n",
-       "      <td>ES1349A</td>\n",
-       "      <td>CCAA País Vasco</td>\n",
-       "      <td>LLODIO</td>\n",
-       "      <td>1994-01-01</td>\n",
-       "      <td>NaT</td>\n",
-       "      <td>43.14407</td>\n",
-       "      <td>-2.96337</td>\n",
-       "      <td>122</td>\n",
-       "      <td>PAÍS VASCO</td>\n",
-       "      <td>ÁLAVA</td>\n",
-       "      <td>LLODIO</td>\n",
-       "      <td>TRAFICO</td>\n",
-       "      <td>SUBURBANA</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>ST</td>\n",
-       "      <td>RESIDENCIAL/COMERCIAL</td>\n",
-       "      <td>C/ LAMUZA, S/N</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1051001</td>\n",
-       "      <td>1</td>\n",
-       "      <td>51</td>\n",
-       "      <td>1</td>\n",
-       "      <td>ES1544A</td>\n",
-       "      <td>CCAA País Vasco</td>\n",
-       "      <td>AGURAIN</td>\n",
-       "      <td>1998-01-01</td>\n",
-       "      <td>NaT</td>\n",
-       "      <td>42.84900</td>\n",
-       "      <td>-2.39370</td>\n",
-       "      <td>594</td>\n",
-       "      <td>PAÍS VASCO</td>\n",
-       "      <td>ÁLAVA</td>\n",
-       "      <td>SALVATIERRA O AGURAIN</td>\n",
-       "      <td>FONDO</td>\n",
-       "      <td>SUBURBANA</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>SF</td>\n",
-       "      <td>RESIDENCIAL/INDUSTRIAL</td>\n",
-       "      <td>CUARTEL DE LA ERTZANTZA</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   COD_LOCAL  PROVINCIA  MUNICIPIO  ESTACION COD_ESTACION_DEM  \\\n",
-       "0    1022001          1         22         1          ES1672A   \n",
-       "1    1036004          1         36         4          ES1349A   \n",
-       "2    1051001          1         51         1          ES1544A   \n",
-       "\n",
-       "             N_RED    NOMBRE  FECHA_INI FECHA_FIN  LATITUD_G  LONGITUD_G  \\\n",
-       "0  CCAA País Vasco  EL CIEGO 2004-05-10       NaT   42.51833    -2.61944   \n",
-       "1  CCAA País Vasco    LLODIO 1994-01-01       NaT   43.14407    -2.96337   \n",
-       "2  CCAA País Vasco   AGURAIN 1998-01-01       NaT   42.84900    -2.39370   \n",
-       "\n",
-       "   ALTITUD      N_CCAA N_PROVINCIA            N_MUNICIPIO TIPO_ESTACION  \\\n",
-       "0      480  PAÍS VASCO       ÁLAVA                ELCIEGO       TRAFICO   \n",
-       "1      122  PAÍS VASCO       ÁLAVA                 LLODIO       TRAFICO   \n",
-       "2      594  PAÍS VASCO       ÁLAVA  SALVATIERRA O AGURAIN         FONDO   \n",
-       "\n",
-       "   TIPO_AREA TIPO_SUBAREA_RURAL EST                    ZONA  \\\n",
-       "0  SUBURBANA                NaN  ST             RESIDENCIAL   \n",
-       "1  SUBURBANA                NaN  ST   RESIDENCIAL/COMERCIAL   \n",
-       "2  SUBURBANA                NaN  SF  RESIDENCIAL/INDUSTRIAL   \n",
-       "\n",
-       "                     DIRECCION  \n",
-       "0  C/GABRIEL CELAYA 8, ELCIEGO  \n",
-       "1               C/ LAMUZA, S/N  \n",
-       "2      CUARTEL DE LA ERTZANTZA  "
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
     "columnas_a_modificar = ['LATITUD_G', 'LONGITUD_G']\n",
     "\n",
     "for columna in columnas_a_modificar:\n",
@@ -1061,7 +1061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1083,7 +1083,7 @@
        " 62: 'NI'}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1099,7 +1099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1124,21 +1124,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'pickle' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m../data/interim/dicc_magnitudes.pkl\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mwb\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m file:\n\u001b[0;32m----> 2\u001b[0m     \u001b[43mpickle\u001b[49m\u001b[38;5;241m.\u001b[39mdump(magnitud_dict, file)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'pickle' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "with open(\"../data/interim/dicc_magnitudes.pkl\", \"wb\") as file:\n",
     "    pickle.dump(magnitud_dict, file)"
@@ -1166,9 +1154,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mEl kernel se bloqueó al ejecutar código en la celda actual o en una celda anterior. \n",
+      "\u001b[1;31mRevise el código de las celdas para identificar una posible causa del error. \n",
+      "\u001b[1;31mHaga clic <a href='https://aka.ms/vscodeJupyterKernelCrash'>aquí</a> para obtener más información. \n",
+      "\u001b[1;31mVea Jupyter <a href='command:jupyter.viewOutput'>log</a> para obtener más detalles."
+     ]
+    }
+   ],
    "source": [
     "# Función para mapear cada fila al valor del diccionario\n",
     "def mapear_latitud(row):\n",
@@ -1183,9 +1183,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mEl kernel se bloqueó al ejecutar código en la celda actual o en una celda anterior. \n",
+      "\u001b[1;31mRevise el código de las celdas para identificar una posible causa del error. \n",
+      "\u001b[1;31mHaga clic <a href='https://aka.ms/vscodeJupyterKernelCrash'>aquí</a> para obtener más información. \n",
+      "\u001b[1;31mVea Jupyter <a href='command:jupyter.viewOutput'>log</a> para obtener más detalles."
+     ]
+    }
+   ],
    "source": [
     "# Función para mapear cada fila al valor del diccionario\n",
     "def mapear_longitud(row):\n",
@@ -1200,7 +1212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1401,7 +1413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1801,7 +1813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1811,7 +1823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1887,7 +1899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1897,7 +1909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -2298,7 +2310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2308,7 +2320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2320,7 +2332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2335,7 +2347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
