--- a/notebooks/Analysis_date.ipynb
+++ b/notebooks/Analysis_date.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# **Danger Graphs by Date**"
+    "# **Danger Analysis by Date**"
    ]
   },
   {
