--- a/notebooks/preprocess.ipynb
+++ b/notebooks/preprocess.ipynb
@@ -5201,7 +5201,19 @@
    "cell_type": "code",
    "execution_count": 47,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mEl kernel se bloqueó al ejecutar código en la celda actual o en una celda anterior. \n",
+      "\u001b[1;31mRevise el código de las celdas para identificar una posible causa del error. \n",
+      "\u001b[1;31mHaga clic <a href='https://aka.ms/vscodeJupyterKernelCrash'>aquí</a> para obtener más información. \n",
+      "\u001b[1;31mVea Jupyter <a href='command:jupyter.viewOutput'>log</a> para obtener más detalles."
+     ]
+    }
+   ],
    "source": [
     "# Crear un mapa base\n",
     "m = folium.Map(location=[stations_excel['LATITUD_G'].mean(), stations_excel['LONGITUD_G'].mean()], zoom_start=6)\n",
