--- a/notebooks/EDA_madrid.ipynb
+++ b/notebooks/EDA_madrid.ipynb
@@ -1176,31 +1176,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Correspondencia para 'MAGNITUD': {'N_MUNICIPIO': {'ALCOBENDAS': 0, 'ATAZAR (EL)': 1, 'COLLADO VILLALBA': 2, 'FUENLABRADA': 3, 'MADRID': 4, 'ALCALÁ DE HENARES': 5, 'COLMENAR VIEJO': 6, 'MÓSTOLES': 7, 'ORUSCO DE TAJUÑA': 8, 'VILLA DEL PRADO': 9, 'VALDEMORO': 10, 'RIVAS-VACIAMADRID': 11, 'TORREJÓN DE ARDOZ': 12, 'VILLAREJO DE SALVANÉS': 13, 'ARGANDA DEL REY': 14, 'COSLADA': 15, 'GETAFE': 16, 'LEGANÉS': 17, 'MAJADAHONDA': 18, 'ALCORCÓN': 19, 'ALGETE': 20, 'ARANJUEZ': 21, 'RASCAFRÍA': 22, 'SAN MARTÍN DE VALDEIGLESIAS': 23, 'GUADALIX DE LA SIERRA': 24}, 'MAGNITUD': {'C6H6': 0, 'CO': 1, 'NO2': 2, 'NOX': 3, 'O3': 4, 'PM10': 5, 'PM2.5': 6, 'SO2': 7}, 'TIPO_AREA': {'URBANA': 0, 'RURAL': 1, 'SUBURBANA': 2}, 'TIPO_ESTACION': {'TRAFICO': 0, 'FONDO': 1, 'INDUSTRIAL': 2}, 'PELIGROSIDAD': {'Baja': 0, 'Normal': 1, 'Alta': 2}}\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Si quieres ver las correspondencias para una columna específica, por ejemplo, 'N_CCAA'\n",
-    "print(\"Correspondencia para 'MAGNITUD':\", correspondencias)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Guardar el diccionario en un archivo .pk\n",
     "with open('../data/interim/factorize_values/facto_madrid.pk', 'wb') as file:\n",
     "    pickle.dump(correspondencias, file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mapeo de \"N_MUNICIPIO\" guardado en \"../data/interim/factorize_values/N_MUNICIPIO_correspondencia.pkl\"\n",
+      "Mapeo de \"MAGNITUD\" guardado en \"../data/interim/factorize_values/MAGNITUD_correspondencia.pkl\"\n",
+      "Mapeo de \"TIPO_AREA\" guardado en \"../data/interim/factorize_values/TIPO_AREA_correspondencia.pkl\"\n",
+      "Mapeo de \"TIPO_ESTACION\" guardado en \"../data/interim/factorize_values/TIPO_ESTACION_correspondencia.pkl\"\n",
+      "Mapeo de \"PELIGROSIDAD\" guardado en \"../data/interim/factorize_values/PELIGROSIDAD_correspondencia.pkl\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "for col, mapping in correspondencias.items():\n",
+    "    filename = f'../data/interim/factorize_values/{col}_correspondencia.pkl'\n",
+    "\n",
+    "    with open(filename, 'wb') as file:\n",
+    "        pickle.dump(mapping, file)\n",
+    "\n",
+    "    print(f'Mapeo de \"{col}\" guardado en \"{filename}\"')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'N_MUNICIPIO': {'ALCOBENDAS': 0,\n",
+       "  'ATAZAR (EL)': 1,\n",
+       "  'COLLADO VILLALBA': 2,\n",
+       "  'FUENLABRADA': 3,\n",
+       "  'MADRID': 4,\n",
+       "  'ALCALÁ DE HENARES': 5,\n",
+       "  'COLMENAR VIEJO': 6,\n",
+       "  'MÓSTOLES': 7,\n",
+       "  'ORUSCO DE TAJUÑA': 8,\n",
+       "  'VILLA DEL PRADO': 9,\n",
+       "  'VALDEMORO': 10,\n",
+       "  'RIVAS-VACIAMADRID': 11,\n",
+       "  'TORREJÓN DE ARDOZ': 12,\n",
+       "  'VILLAREJO DE SALVANÉS': 13,\n",
+       "  'ARGANDA DEL REY': 14,\n",
+       "  'COSLADA': 15,\n",
+       "  'GETAFE': 16,\n",
+       "  'LEGANÉS': 17,\n",
+       "  'MAJADAHONDA': 18,\n",
+       "  'ALCORCÓN': 19,\n",
+       "  'ALGETE': 20,\n",
+       "  'ARANJUEZ': 21,\n",
+       "  'RASCAFRÍA': 22,\n",
+       "  'SAN MARTÍN DE VALDEIGLESIAS': 23,\n",
+       "  'GUADALIX DE LA SIERRA': 24},\n",
+       " 'MAGNITUD': {'C6H6': 0,\n",
+       "  'CO': 1,\n",
+       "  'NO2': 2,\n",
+       "  'NOX': 3,\n",
+       "  'O3': 4,\n",
+       "  'PM10': 5,\n",
+       "  'PM2.5': 6,\n",
+       "  'SO2': 7},\n",
+       " 'TIPO_AREA': {'URBANA': 0, 'RURAL': 1, 'SUBURBANA': 2},\n",
+       " 'TIPO_ESTACION': {'TRAFICO': 0, 'FONDO': 1, 'INDUSTRIAL': 2},\n",
+       " 'PELIGROSIDAD': {'Baja': 0, 'Normal': 1, 'Alta': 2}}"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "correspondencias"
    ]
   },
   {
